Effects, enchantments, spells, vfx, weather